# sc_mechinterp

./: .gitignore  LICENSE  README.md  setup.py  setup_env.sh
docs/: DOCKER_GUIDE.md  ENVIRONMENT_SETUP.md  QUICKSTART.md  REPRODUCIBILITY_GUIDE.md  api_reference.rst  conf.py  index.rst  requirements.txt
docs/usage/: installation.rst  quickstart.rst  scfeaturelens.rst  tutorials.rst
examples/: README.md
examples/scFeatureLens/: data_setup.md  example.py  example_data_prep.py  feature_analysis_demo.ipynb
scripts/: setup_data.py
setup/: Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  setup_env.sh  validate_environment.py
tests/: test_basic.py
tools/: README.md
tools/scFeatureLens/: README.md  __init__.py  analysis_functions.py  cli.py  config_example.yaml  example.py  hypothesis.py  pipeline.py  sae.py  sc_mechinterp.py  utils.py  viz.py
