[tool.poetry]
name = "sc_mechinterp"
version = "0.1.0"
description = "A collection of tools for mechanistic interpretability analysis of single-cell RNA-seq data"
authors = ["Viktoria Schuster <vschuste@stanford.edu>"]
readme = "README.md"
homepage = "https://github.com/yourusername/sc_mechinterp"
repository = "https://github.com/yourusername/sc_mechinterp"
documentation = "https://sc-mechinterp.readthedocs.io/"
keywords = ["single-cell", "mechanistic-interpretability", "sparse-autoencoders", "gene-expression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.8"
torch = ">=1.9.0"
numpy = ">=1.21.0"
pandas = ">=1.3.0"
scipy = ">=1.7.0"
scikit-learn = ">=1.0.0"
statsmodels = ">=0.13.0"
anndata = ">=0.8.0"
scanpy = ">=1.8.0"
tqdm = ">=4.62.0"
PyYAML = ">=6.0"
goatools = ">=1.2.0"
psutil = ">=5.8.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0"
pytest-cov = ">=3.0"
black = ">=22.0"
flake8 = ">=4.0"
mypy = ">=0.900"
jupyter = ">=1.0.0"
notebook = ">=6.0"
pre-commit = ">=2.15.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=4.0"
sphinx-rtd-theme = ">=1.0"
myst-parser = ">=0.15"

[tool.poetry.scripts]
scfeaturelens = "scFeatureLens.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "goatools.*",
    "scanpy.*",
    "anndata.*",
    "statsmodels.*",
]
ignore_missing_imports = true
